--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="primaryColor">#f8f8f8</color>
+    <color name="primaryLightColor">#ffffff</color>
+    <color name="primaryDarkColor">#c5c5c5</color>
+    <color name="primaryTextColor">#000000</color>
 </resources>
