--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -40,6 +40,7 @@
             app:todayItem_background="@drawable/circle_blue_solid_background"/>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/forecast_recyclerview"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="1dp"
@@ -49,6 +50,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView" />
+            app:layout_constraintTop_toBottomOf="@+id/calendarView"
+            tools:listitem="@layout/weather_item" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
