--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -1,107 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.cardview.widget.CardView
+    <data>
+        <variable
+            name="weatherForecast"
+            type="com.example.instantweather.data.model.WeatherForecast" />
+        <variable
+            name="weatherDescription"
+            type="com.example.instantweather.data.model.NetworkWeatherDescription" />
+    </data>
+
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardCornerRadius="5dp"
-        android:elevation="1dp"
-        android:layout_margin="17dp">
-        <RelativeLayout
+        android:layout_height="wrap_content">
+
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            >
+            android:layout_height="wrap_content"
+            app:cardCornerRadius="5dp"
+            android:elevation="1dp"
+            android:layout_margin="17dp">
 
-            <TextView
-                android:id="@+id/city_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="10dp"
-                android:textSize="30sp"
-                android:layout_marginTop="20dp"
-                android:text="Lagos" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <ImageView
-                android:id="@+id/weather_icon"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="20dp"
-                android:src="@drawable/ic_wb_sunny_black_24dp" />
+                <TextView
+                    android:id="@+id/city_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="10dp"
+                    android:textSize="30sp"
+                    android:layout_marginTop="20dp"
+                    tools:text="Lagos" />
 
-            <TextView
-                android:id="@+id/weather_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/city_name"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
-                android:text="Cloudy" />
+                <com.github.pwittchen.weathericonview.WeatherIconView
+                    android:id="@+id/weather_icon"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:weatherIconSize="50"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginEnd="20dp"
+                    setIcon="@{weatherDescription.description}"
+                    app:weatherIconColor="#000000" />
 
-            <TextView
-                android:id="@+id/city_temp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/weather_description"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="25dp"
-                android:text="36\u2103"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/weather_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/city_name"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@{weatherDescription.description}"
+                    tools:text="Cloudy" />
 
-            <LinearLayout
-                android:id="@+id/weather_details"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/weather_description"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="20dp"
-                android:orientation="horizontal"
-                android:weightSum="3">
+                <TextView
+                    android:id="@+id/city_temp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/weather_description"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="25dp"
+                    tools:text="36\u2103"
+                    android:text="@{String.valueOf(weatherForecast.networkWeatherCondition.temp).concat(@string/temp_unit)}"
+                    android:textSize="18sp" />
+
+                <LinearLayout
+                    android:id="@+id/weather_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/weather_description"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="25dp"
+                    android:layout_marginEnd="20dp"
+                    android:orientation="horizontal"
+                    android:weightSum="3">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_weight="1"
+                        android:drawableStart="@drawable/ic_wind"
+                        android:drawablePadding="2dp"
+                        tools:text="40"
+                        android:text="@{String.valueOf(weatherForecast.wind)}"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:layout_weight="1"
+                        android:drawableStart="@drawable/ic_pressure"
+                        android:drawablePadding="2dp"
+                        tools:text="40"
+                        android:text="@{String.valueOf(weatherForecast.networkWeatherCondition.pressure)}"
+                        android:textSize="18sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:drawableStart="@drawable/ic_humidity"
+                        tools:text="40"
+                        android:text="@{String.valueOf(weatherForecast.networkWeatherCondition.humidity)}"
+                        android:textSize="18sp" />
+                </LinearLayout>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
-                    android:drawableLeft="@drawable/ic_wind"
-                    android:drawablePadding="2dp"
-                    android:text="40"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="8dp"
-                    android:layout_weight="1"
-                    android:drawableStart="@drawable/ic_pressure"
-                    android:drawablePadding="2dp"
-                    android:text="40"
-                    android:textSize="18sp" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:drawableStart="@drawable/ic_humidity"
-                    android:text="40"
-                    android:textSize="18sp" />
-            </LinearLayout>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="March, 13, 2020"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="5dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginBottom="10dp"
-                android:layout_below="@id/weather_details"/>
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+                    tools:text="March, 13, 2020"
+                    android:text="@{weatherForecast.date}"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_below="@id/weather_details" />
+            </RelativeLayout>
+        </androidx.cardview.widget.CardView>
+    </LinearLayout>
+</layout>
