--- a/app/src/main/res/layout/weather_item.xml
+++ b/app/src/main/res/layout/weather_item.xml
@@ -8,7 +8,7 @@
             name="weatherForecast"
             type="com.example.instantweather.data.model.WeatherForecast" />
         <variable
-            name="weatherDescription"
+            name="weatherForecastDescription"
             type="com.example.instantweather.data.model.NetworkWeatherDescription" />
     </data>
 
@@ -40,13 +40,13 @@
 
                 <com.github.pwittchen.weathericonview.WeatherIconView
                     android:id="@+id/weather_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     app:weatherIconSize="50"
                     android:layout_alignParentEnd="true"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
-                    setIcon="@{weatherDescription.description}"
+                    setIcon="@{weatherForecastDescription.description}"
                     app:weatherIconColor="#000000" />
 
                 <TextView
@@ -56,7 +56,7 @@
                     android:layout_below="@id/city_name"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="5dp"
-                    android:text="@{weatherDescription.description}"
+                    android:text="@{weatherForecastDescription.description}"
                     tools:text="Cloudy" />
 
                 <TextView
@@ -89,7 +89,7 @@
                         android:drawableStart="@drawable/ic_wind"
                         android:drawablePadding="2dp"
                         tools:text="40"
-                        android:text="@{String.valueOf(weatherForecast.wind)}"
+                        android:text="@{String.valueOf(weatherForecast.wind.speed)}"
                         android:textSize="18sp" />
 
                     <TextView
