Change weather item layout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,11 +21,11 @@
                 android:id="@+id/textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Instant Weather"
+                android:text="@string/instant_weather"
                 android:gravity="center"
+                android:textStyle="bold"
                 android:layout_margin="15dp"
-                android:textSize="20sp"
-                android:layout_gravity="center"/>
+                android:textSize="20sp" />
         </com.google.android.material.appbar.MaterialToolbar>
 
         <fragment
